# open-swarm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CODE_SWEEP_REPORT.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FEATURE_STATUS.md  HANDOFF_NOTES.md  ISSUES.md  Makefile  NOTICE  README.md  REALISTIC_RELEASE_NOTICE_v0.2.0.md  RELEASE_NOTICE_v0.2.0.md  ROADMAP.md  TODO.md  USERGUIDE.md  USER_FEEDBACK.md  UX.md  blueprint_base_content.txt  blueprintbase_usage.txt  build_all_blueprints.py  build_blueprint_executables.py  codey-dev  codey.spec  decision.md  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.override.yaml.example  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  echocraft-blueprint.spec  family_ties.spec  fly.toml  (+44 more)
.Jules/: hone.md
.letta/: settings.json  settings.local.json
blueprints/: README.md
docs/: ASYNC_RESPONSES.md  BASELINE_REPORT.md  BLUEPRINT_LIBRARY.md  BLUEPRINT_SPLASH.md  CLI_FUSION.md  COMFYUI_SETUP.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EXAMPLES.md  GUIDED_TOUR.md  MOA.md  OPENWEBUI_MOA.md  ORACLE_DEPLOY.md  ORCHESTRATION_PATTERNS.md  QUICKSTART.md  SCREENSHOTS.md  SESSION_EXPLORER.md  SKILLS_AND_CONSENSUS_WALKTHROUGH.md  SWARM_CONFIG.md  SWARM_WORKFLOWS.md  TODO.md  TOOLS.md  TROUBLESHOOTING.md  USER_JOURNEY.md  VISION.md  architecture_marketplace_to_mcp.md  auth_saml_idp.md  blueprint_standards.md  blueprint_test_mode_ux.md  blueprints_api.md  framework_builtin_tools.md  github_marketplace.md  mcp_blueprints_adapter.md  mcp_server_mode.md  troubleshooting_suggestion_box.md  wagtail_marketplace.md  websocket_chat.md
pyinstaller_specs/: codey.spec  geese.spec
scripts/: aggregate_feedback.py  build_frontend.sh  capture_cli_evidence.sh  capture_prod_evidence.sh  capture_user_journey.py  check_ux_compliance.py  codey  codey_py_entry.py  delete_stale_branches.sh  demo_consensus.py  demo_inference_profile.py  demo_moa_grok_multiseat.py  gen_blueprint_table.py  lint_blueprints.py  paste_userguide_from_scratch.py  pretest_cleanup.sh  prove_cli_permutations.py  prove_gemini_toolcalling.py  prove_mcp_live.py  prove_skill_across_clis.py  prove_skill_asset_toolcall.py  prove_swarm_workflows.py  render_demo_gif.py  run_tests.py  smoke_api.sh  stress_test_suite.py
src/: manage.py  swarm_log.json
tests/: conftest.py  swarm_config.json  (+21 more)
(+838 files in other folders)
