[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-swarm"
version = "0.2.0"
description = "Framework for creating, managing, and deploying autonomous agent swarms using openai-agents."
readme = "README.md"
authors = [
  { name = "Matthew Hand", email = "matthewhandau@gmail.com" },
  { name="Open Swarm Community" },
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.58.1",
    "openai-agents",
    "django>=4.2,<5.0",
    "djangorestframework>=3.15.2",
    "pyinstaller>=6.12.0",
    "typer>=0.9",
    "platformdirs>=4.0",
    "userpath>=1.8",
    "django-allauth>=65.6.0",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.8.2",
    "drf-spectacular>=0.23.0",
    "django-cors-headers>=4.7.0",
    "jmespath>=1.0.1",
    "tiktoken>=0.9.0",
    "asyncio>=3.4.3",
]

[project.urls]
"Homepage" = "https://github.com/stinky-ai/open-swarm"
"Bug Tracker" = "https://github.com/stinky-ai/open-swarm/issues"

[project.scripts]
swarm-cli = "swarm.extensions.launchers.swarm_cli:app"
swarm-api = "swarm.extensions.launchers.swarm_api:main"

[tool.setuptools.package-data]
"swarm.blueprints" = ["**"]

[project.optional-dependencies]
dev = [
   "pytest>=8.3.4", "pytest-asyncio>=0.25.1", "pytest-cov>=6.0.0",
   "pytest-django>=4.9.0", "pytest-mock>=3.14.0", "python-semantic-release>=9.20.0",
   "black", "ruff", "isort",
]
experimental = [ "nemoguardrails>=0.11.0", ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.swarm.settings"
pythonpath = ["src"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
norecursedirs = [".venv", ".*", "node_modules", "build", "dist"]
markers = ["llm: LLM interaction", "mcp: (DEPRECATED) MCP server", "network: network access"]

[tool.ruff]
# Corrected: Each key on a new line
line-length = 120
select = ["E", "W", "F", "I", "UP", "N", "B", "A", "C4", "T20", "PYI", "Q", "RET", "SIM", "TID", "ARG", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["swarm", "blueprints"]

